[package]
name = "steadfast"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["steadfast-db", "steadfast-json", "steadfast-macros", "steadfast-parsing", "steadfast-rand", "steadfast-serializer", "steadfast-crypt", "steadfast-uuid"]

[dependencies]
steadfast-macros = {path="./steadfast-macros"}
steadfast-uuid = {path="./steadfast-uuid"}
steadfast-db = {path="./steadfast-db"}
steadfast-parsing = {path="./steadfast-parsing"}
steadfast-json = {path="./steadfast-json"}
steadfast-serializer = {path="./steadfast-serializer"}
