[package]
name = "steadfast"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "steadfast-async", "steadfast-bytes",
  "steadfast-crypt",
  "steadfast-db",
  "steadfast-json",
  "steadfast-macros",
  "steadfast-parsing",
  "steadfast-rand",
  "steadfast-serializer", "steadfast-time",
  "steadfast-uuid",
]

[dependencies]
steadfast-async = {path="./steadfast-async"}
steadfast-db = {path="./steadfast-db"}
steadfast-json = {path="./steadfast-json"}
steadfast-macros = {path="./steadfast-macros"}
steadfast-parsing = {path="./steadfast-parsing"}
steadfast-serializer = {path="./steadfast-serializer"}
steadfast-uuid = {path="./steadfast-uuid"}
steadfast-bytes = {path="./steadfast-bytes"}
