[package]
name = "steadfast-db"
version = "0.1.0"
edition = "2024"

[dependencies]
steadfast-crypt = {path = "../steadfast-crypt"}
steadfast-serializer = {path = "../steadfast-serializer"}
steadfast-uuid = {path = "../steadfast-uuid"}
steadfast-macros = {path = "../steadfast-macros"}
steadfast-time = {path = "../steadfast-time"}
steadfast-bytes = {path = "../steadfast-bytes"}